# cybersec-dataset-utlity

./: README.md  caldera_enriched_events.json  caldera_raw_events.json  main.py  mitre_tactic_technique.csv  mitre_tactic_technique_group.csv  parsed_tcpdump_events.jsonl  pyproject.toml
data/: caldera_enriched_events.json  caldera_events.json  caldera_raw_events.json  caldera_sample_enriched_events.json  caldera_sample_raw_events.json
help-doc/: event-format.txt  tools and simulation.txt
rules/: cyber_rules_001.json  cyber_rules_002.json
src/: config.py  create_mitre_tactic_mapping.py  mapping.py  merge_all_csv_unsw.py  merge_all_cve_cic.py  normalise_atomicred.py  normalise_caldera.py  normalise_cic.py  normalise_darpa_pascal.py  normalise_darpa_tcpdump.py  normalise_snort.py  normalise_splunk.py  rule_engine_enriched_log.py  rule_engine_raw_log.py  rule_engine_temp.py  security_event.py
src/llm/: .env  baseline_caldera.py  llm_unified_dataset.py  llm_unifoed_dataset.py  socs-agent-explanation.py  socs-agent.py
src/mongo/: atomic_red.py  caldera_events.py  cic_events.py  snort_rules.py  spunk_security.py
