[project]
name = "cybersec-dataset-utlity"
version = "0.1.0"
description = "refine cybersecurity datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asteval>=1.0.8",
    "dotenv>=0.9.9",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langsmith>=0.8.4",
    "pandas>=3.0.2",
    "pymongo>=4.17.0",
    "pyyaml>=6.0.3",
]
